--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,101 +1,11 @@
-<style>
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    height: 50%;
-}
-.register{
-  color: #aaaaaa;
-    float: bottom;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-</style>
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">login</button>
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <a href="http://localhost:8081/register" class="register">register</a>
-    <form action="/">
-    name: <input type="text" name="username"> 
-    password: <input type="text" name="password">  
-    <input type="submit" value="submit">
+<button type="button" id="loginButton"> login</button>
+<button type="button" id="registerButton"> register</button>
+<script type="text/javascript">
   
-  </form> 
-  </div>
-
-</div>
-
-<script>
-// Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-    modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
+  document.getElementById("loginButton").onclick = function(){
+    location.href="/login";
+  };
+  document.getElementById("registerButton").onclick = function(){
+    location.href="/register";
+  };
 </script>
-
-
-
- 
-
-
- 
