--- a/views/maps.hbs
+++ b/views/maps.hbs
@@ -1,7 +1,13 @@
 <div id="map_wrapper">
     <div id="map_canvas" class="mapping"></div>
-    <a href="" id="maps">submit</a>
+    <a href="" id="maps">submit</a><br><br>
+    <a href="/logout">Logout</a>
 </div>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9q7X02IpHJI_GYGjfIvvp8y9Ffp--EX0&callback=initialize">
+</script>
+<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+</script>
 <script>
 
 function initialize() {
