--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,23 +5,23 @@
     <input type="submit" value="submit">
 </form> -->
 <div id="reg">
-<form>
+<form method="POST" action="/register">
     <p class="h5 text-center mb-4">Sign up</p>
 
     <div class="md-form">
         <i class="fa fa-user prefix grey-text"></i>
-        <input type="text" id="orangeForm-name" class="form-control">
+        <input type="text" id="orangeForm-name" class="form-control" name=name>
         <label for="orangeForm-name">Your name</label>
     </div>
     <div class="md-form">
         <i class="fa fa-envelope prefix grey-text"></i>
-        <input type="text" id="orangeForm-email" class="form-control">
+        <input type="text" id="orangeForm-email" class="form-control" name=email>
         <label for="orangeForm-email">Your email</label>
     </div>
 
     <div class="md-form">
         <i class="fa fa-lock prefix grey-text"></i>
-        <input type="password" id="orangeForm-pass" class="form-control">
+        <input type="password" id="orangeForm-pass" class="form-control" name=password>
         <label for="orangeForm-pass">Your password</label>
     </div>
 
