--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,28 +1,28 @@
 <!-- Login Page
-<form method="POST"  action="/login">
+<form method="POST"  action="/login" class="form">
     name: <input type="text" name="name"> 
     password: <input type="password" name="password">  
     <input type="submit" value="submit">
 </form> 
  -->
- <div id="login">
-{{msg}}
- <form method="POST" action="/login">
+ 
 
+ <form method="POST" action="/login" class="form">
+    {{msg}}
+    <p class="h5 text-center mb-4">Login</p>
     <div class="md-form">
         <i class="fa fa-envelope prefix grey-text"></i>
         <input type="text" id="defaultForm-email" class="form-control" name="name">
-        <label for="defaultForm-email">name</label>
+        <label class="label" for="defaultForm-email">name</label>
     </div>
 
     <div class="md-form">
         <i class="fa fa-lock prefix grey-text"></i>
         <input type="password" id="defaultForm-pass" class="form-control" name="password">
-        <label for="defaultForm-pass">Your password</label>
+        <label class="label" for="defaultForm-pass">Your password</label>
     </div>
 
     <div class="text-center">
         <button class="btn btn-default">Login</button>
     </div>
 </form>
-</div>
