--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,13 @@ a {
 }
 
 #back{
-    background-color: rgba(240, 255, 253, 0.514)
+    padding-left: 0px;
+    padding-top:0px;
+    padding-right:0px;
+    height: 50px;
+    background-color: black;
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
    
 }
 .div{
@@ -17,31 +23,7 @@ a {
     height: 50%;
     
 }
-#button{
-    background: #000000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-}
-#img{
-    margin-left: 10%;
-    margin-top: 10%;
-    margin-right: 10%;
-    margin-bottom: 10%;
-}
-#menu{
-    width: 10%;
-    height: 10%;
-    
-}
-
-#panel{
-    width: 10%;
-    height: 100px;
-    text-align: center;
-    background-color: #e5eecc;
-    border: solid 1px #c3c3c3;
-}
 #login{
     width: 79.09px;
     height: 24px;
@@ -64,14 +46,7 @@ background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, F
     width: 100%;
     height: 100%;
 }
-#login{
-    margin-top: 10%;
-    margin-left: 20%;
-    width: 50%;
-    height:30%;
-    align:center;
-    border-style: hidden;
-}
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -83,11 +58,11 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-    background-color: #4CAF50;
+    background-color: #000;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
-    border: solid;
+    border: transparent;
     border-width: thin;
     cursor: pointer;
 }
@@ -96,62 +71,29 @@ button:hover {
     opacity: 0.8;
 }
 
-/* Extra styles for the cancel button */
-.cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
+
+.navbar-inverse{
+    height: 50px;
 }
 
-/* Center the image and position the close button */
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
-    position: relative;
-}
+.form{
+    width: 400px;
+    height: 450px;
+    margin-left: 483px;
+    margin-right: 483px;
 
+}
+//css for homepage
+* {box-sizing:border-box}
 
-
-.container {
-    padding: 10px;
+.label{
+  background-color: transparent; 
 }
-
-span.psw {
-    float: right;
-    padding-top: 16px;
+.userPage{
+  margin-top: 0px;
+  background-color: black;
+  height: 48px;
 }
-
-/* Add Zoom Animation */
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
-}
-
-@-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
-    to {-webkit-transform: scale(1)}
-}
-    
-@keyframes animatezoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-    span.psw {
-       display: block;
-       float: none;
-    }
-    .cancelbtn {
-       width: 100%;
-    }
-}
-#loginButton{
-    width: 10%,
-    text-align:center;
-}
-#registerButton{
-    width: 14%,
-    text-align:center;
+.navbar.navbar-inverse{
+  margin-bottom: 0px;
 }
