--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-   
+    
     <meta charset="utf-8">
     <title>Example App</title>
     <!-- Latest compiled and minified CSS -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/css/mdb.min.css" />
 
@@ -22,11 +22,33 @@
  
 </head>
 <body  id="back">
+  <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">SmartBins</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+    <ul class="nav navbar-nav navbar-right">
 
+        {{#if sessionValue}}
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-out" id="logoutButton"></span> Logout</a></li>
+          
+        {{else}}
+          <li><a href="/register"><span class="glyphicon glyphicon-user" id="registerButton"></span> Sign Up</a></li>
+          <li><a href="/login"><span class="glyphicon glyphicon-log-in" id="loginButton"></span> Login</a></li>
+        {{/if}}
+      </ul>
+    </div>
+  </div>
+</nav>
+  
     {{{body}}}
 
 </body>
-<script type="text/javascript">
 
-</script>
 </html>
