--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,37 +1,27 @@
 body {
-  padding: 50px;
+  /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
-}
+
 
 #back{
-    padding-left: 0px;
+    /*padding-left: 0px;
     padding-top:0px;
-    padding-right:0px;
+    padding-right:0px;*/
     height: 50px;
     background-color: black;
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
    
 }
-.div{
+/*.div{
     align-content: center;
     width: 100%;
     height: 50%;
     
-}
+}*/
 
-#login{
-    width: 79.09px;
-    height: 24px;
-    margin-left: 0%;
-    margin-bottom:10%;
-    border: solid 1px #000000;
-
-}
 #map {
     height: 100%;
   }
@@ -43,6 +33,7 @@ a {
 }
 
 #map_canvas {
+    margin-top: 50px;
     width: 100%;
     height: 100%;
 }
@@ -60,7 +51,7 @@ input[type=text], input[type=password] {
 button {
     background-color: #000;
     color: white;
-    padding: 14px 20px;
+    /*padding: 14px 20px;*/
     margin: 8px 0;
     border: transparent;
     border-width: thin;
@@ -77,10 +68,10 @@ button:hover {
 }
 
 .form{
-    width: 400px;
+    width: 350px;
     height: 450px;
-    margin-left: 483px;
-    margin-right: 483px;
+    /*margin-left: 483px;
+    margin-right: 483px;*/
 
 }
 //css for homepage
@@ -89,11 +80,70 @@ button:hover {
 .label{
   background-color: transparent; 
 }
-.userPage{
+/*.userPage{
   margin-top: 0px;
   background-color: black;
   height: 48px;
-}
+}*/
 .navbar.navbar-inverse{
   margin-bottom: 0px;
+}
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+}
+
+.container img {
+    width: 100%;
+    height: 100%;
+    margin-top: 55px;
+}
+
+.container .btn {
+    width: 188px;
+    height: 34px;
+    border:solid;
+    position: absolute;
+    top: 295px;
+    left: 295px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+     background-color: Transparent;
+    background-repeat:no-repeat;
+    border: solid;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
+
+@media screen and (max-device-width: 600px) and (min-device-width: 0px){
+  .container .btn{
+    width: 100px;
+    height: 5px;
+    border:solid;
+    /*position: absolute;*/
+    top: 178px;
+    left: 157px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    font-size: 16px;
+    padding: 6px 12px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+     background-color: Transparent;
+    background-repeat:no-repeat;
+    border: solid;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+  }
 }
