UI/UX Improvement for the frontend

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,26 +1,28 @@
 body {
   /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url('../images/background.png');
+  background-size: cover;
 }
 
-
-
-#back{
-    /*padding-left: 0px;
-    padding-top:0px;
-    padding-right:0px;*/
-    height: 50px;
-    background-color: black;
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-   
+.col-centered{
+    float: none;
+    margin: 0 auto;
 }
-/*.div{
-    align-content: center;
-    width: 100%;
-    height: 50%;
-    
-}*/
+
+#logo {
+    max-width: 100%;
+    height: auto;
+    width: auto; 
+    padding: 20px;
+}
+
+#heading{
+    font-size: 8vw;
+    font-weight: 600;
+    color: white;
+    text-shadow: 2px 2px 5px black;
+}
 
 #map {
     height: 100%;
@@ -28,17 +30,45 @@ body {
 #test{
     background: #e5eecc;
 }
-#map_wrapper {
-    height: 400px;
+
+/* #Mobile (Landscape)
+================================================== */
+/* Note: Design for a width of 600px */
+@media all and (min-width: 600px) and (max-width: 767px) {
+    .hidden-mb{
+        display:none;
+        width:0;
+        height:0;
+        opacity:0;
+        visibility: collapse;
+    } 
+}
+/* #Mobile (Landscape)
+================================================== */
+/* Note: Design for a width of 480px */
+@media all and (min-width: 480px) and (max-width: 599px) {
+    .hidden-mb{
+        display:none;
+        width:0;
+        height:0;
+        opacity:0;
+        visibility: collapse;
+    } 
+}
+/*  #Mobile (Portrait)
+================================================== */
+/* Note: Design for a width of 320px */
+@media all and (max-width: 479px) {
+    .hidden-mb{
+        display:none;
+        width:0;
+        height:0;
+        opacity:0;
+        visibility: collapse;
+    }    
 }
 
-#map_canvas {
-    margin-top: 50px;
-    width: 100%;
-    height: 100%;
-}
-
-input[type=text], input[type=password] {
+/*input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -46,7 +76,7 @@ input[type=text], input[type=password] {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-
+*/
 /* Set a style for all buttons */
 button {
     background-color: #000;
@@ -62,11 +92,6 @@ button:hover {
     opacity: 0.8;
 }
 
-
-.navbar-inverse{
-    height: 50px;
-}
-
 .form{
     width: 350px;
     height: 450px;
@@ -74,7 +99,7 @@ button:hover {
     margin-right: 483px;*/
 
 }
-//css for homepage
+
 * {box-sizing:border-box}
 
 .label{
@@ -85,9 +110,6 @@ button:hover {
   background-color: black;
   height: 48px;
 }*/
-.navbar.navbar-inverse{
-  margin-bottom: 0px;
-}
 .container {
     position: relative;
     width: 100%;
@@ -100,7 +122,7 @@ button:hover {
     margin-top: 55px;
 }
 
-.container .btn {
+/*.container .btn {
     width: 188px;
     height: 34px;
     border:solid;
@@ -128,7 +150,6 @@ button:hover {
     width: 100px;
     height: 5px;
     border:solid;
-    /*position: absolute;*/
     top: 178px;
     left: 157px;
     transform: translate(-50%, -50%);
@@ -146,4 +167,4 @@ button:hover {
     overflow: hidden;
     outline:none;
   }
-}
+}*/
