--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,18 @@
-<!-- <div class="container">
-  <img  src="/images/frontPage1.jpg" alt="Snow"  >
-  <button class="btn"></button>
-</div> -->
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 text-center">	
+			<img id="logo" class="img-fluid" src="images/smart-trash.png">
+		</div>
+		<div class="col-md-6 center-block text-center">
+			<table style="height: 100%;">
+			  <tbody>
+			    <tr>
+			      <td class="align-middle">
+					<span id="heading" class="text-center">Smart Bins</span>
+			      </td>
+			    </tr>
+			  </tbody>
+			</table>
+		</div>
+	</div>
+</div>
