--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,28 +1,56 @@
-<!-- Login Page
-<form method="POST"  action="/login" class="form">
-    name: <input type="text" name="name"> 
-    password: <input type="password" name="password">  
-    <input type="submit" value="submit">
-</form> 
- -->
- 
+<!-- Card -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 text-center hidden-mb"> 
+            <img id="logo" src="images/smart-trash.png">
+        </div>
+        <div class="col-md-6 col-xs-10 mx-auto mt-5 center-block">
+            <table style="height: 100%; width: 100%;">
+              <tbody>
+                <tr>
+                  <td class="align-middle">
+                    <!-- Card -->
+                    <div class="card card-cascade narrower col-md-8">
+                        <!-- Card image -->
+                        <div class="card-header gradient-card-header purple-gradient">
+                            <!-- Title -->
+                            <h2 class="card-header-title">Login</h2>
+                        </div>
+                        <!-- Card body -->
+                        <div class="card-body">
 
- <form method="POST" action="/login" class="form">
-    {{msg}}
-    <p class="h5 text-center mb-4">Login</p>
-    <div class="md-form">
-        <i class="fa fa-envelope prefix grey-text"></i>
-        <input type="text" id="defaultForm-email" class="form-control" name="name">
-        <label class="label" for="defaultForm-email">name</label>
-    </div>
+                            <!-- Material form register -->
+                            <form method="POST" action="/login">
+                                {{msg}}
+                                <!-- Material input text -->
+                                <div class="md-form">
+                                    <i class="fa fa-user prefix grey-text"></i>
+                                    <input type="text" id="materialFormCardNameEx" name="name" class="form-control">
+                                    <label for="materialFormCardNameEx" class="font-weight-light">Your name</label>
+                                </div>
 
-    <div class="md-form">
-        <i class="fa fa-lock prefix grey-text"></i>
-        <input type="password" id="defaultForm-pass" class="form-control" name="password">
-        <label class="label" for="defaultForm-pass">Your password</label>
-    </div>
+                                <!-- Material input password -->
+                                <div class="md-form">
+                                    <i class="fa fa-key prefix grey-text"></i>
+                                    <input type="password" id="materialFormCardPasswordEx" name="password" class="form-control">
+                                    <label for="materialFormCardPasswordEx" class="font-weight-light">Your password</label>
+                                </div>
 
-    <div class="text-center">
-        <button class="btn btn-default">Login</button>
+                                <div class="text-center py-4 mt-3">
+                                    <button class="btn btn-cyan" type="submit">LOGIN</button>
+                                </div>
+                            </form>
+                            <!-- Material form register -->
+
+                        </div>
+                        <!-- Card body -->
+
+                    </div>
+                    <!-- Card -->
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+        </div>
     </div>
-</form>
+</div>
