user part removed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
 			  <tbody>
 			    <tr>
 			      <td class="align-middle">
-					<span id="heading" class="text-center">Smart Bins</span>
+					<span id="heading" class="text-center">e.S.W.A.M</span>
 			      </td>
 			    </tr>
 			  </tbody>
