--- a/views/register.hbs
+++ b/views/register.hbs
@@ -54,7 +54,7 @@
                                     <i class="fa fa-envelope prefix grey-text"></i> 
                                     <select class="form-control" id="sel1" name="role">
                                         <option>register as Driver</option>
-                                        <option>register as Customer</option>
+                                        {{!-- <option>register as Customer</option> --}}
                                     </select>
                                     
                                 </div>
